se agrego una etiqueta p

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </style>
   </head>
   <body>
+	<p>Hola mundo</p>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
